build_err3.txt

> isql-react@0.0.0 build
> vite build

[36mvite v8.0.1 [32mbuilding client environment for production...[36m[39m
[2Ktransforming...✓ 22 modules transformed.
[31m✗[39m Build failed in 145ms
[31merror during build:
[31mBuild failed with 1 error:

[plugin vite:css-post]
SyntaxError: [lightningcss minify] Invalid token in pseudo element: WhiteSpace(" ")
616 |  .oracle-note b { color: #6E2F06; }
617 |  
618 |  scrollbar-width: thin;
    |                   ^
619 |  ::-webkit-scrollbar { width: 6px; height: 6px; }
620 |  ::-webkit-scrollbar-track { background: #F0F0F0; }
    at Module.<anonymous> (C:\Users\LOQ\Desktop\iSQL\isql-react\node_modules\lightningcss\node\index.js:56:14)
    at minifyCSS (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/chunks/node.js:21189:59)
    at async finalizeCss (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/chunks/node.js:21035:36)
    at async Promise.all (index 1)
    at async Object.run (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/chunks/node.js:2436:22)
    at async PluginContextImpl.renderChunk (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/chunks/node.js:20574:19)
    at async plugin (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/rolldown/dist/shared/bindingify-input-options-DoaqRULI.mjs:1216:16)
    at async plugin.<computed> (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/rolldown/dist/shared/bindingify-input-options-DoaqRULI.mjs:1575:12)[31m
    at aggregateBindingErrorsIntoJsError (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/rolldown/dist/shared/error-BO4SlZV_.mjs:48:18)
    at unwrapBindingResult (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/rolldown/dist/shared/error-BO4SlZV_.mjs:18:128)
    at #build (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/rolldown/dist/shared/rolldown-build-yQC7KN8K.mjs:3311:34)
    at async buildEnvironment (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/chunks/node.js:32817:64)
    at async Object.build (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/chunks/node.js:33239:19)
    at async Object.buildApp (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/chunks/node.js:33236:153)
    at async CAC.<anonymous> (file:///C:/Users/LOQ/Desktop/iSQL/isql-react/node_modules/vite/dist/node/cli.js:778:3) {
  errors: [Getter/Setter]
}[39m
